# Core-GPT

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: model_config.yaml  quick_training.yaml  smoke_training.yaml  training_config.yaml
data/: README.md
datasets/: preprocessing.py  text_dataset.py
inference/: generate.py  sampling.py
models/: attention.py  embedding.py  feedforward.py  gpt.py  positional_encoding.py  transformer_block.py
scripts/: evaluate.py  generate.py  preprocess_data.py  train.py
tests/: test_attention.py  test_tokenizer.py  test_transformer.py
tokenizer/: bpe.py  tokenizer.py  vocab.py
training/: loss.py  optimizer.py  scheduler.py  trainer.py
utils/: checkpoint.py  logger.py  metrics.py
